<resources>
    <string name="app_name">Project3</string>
    <string name="glide_radio_text">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_radio_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="no_option_selected_error">Please select the file to download</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>
    <string name="status_failed">Download failed</string>
    <string name="status_success">Download Succeed</string>
    <string name="notification_title">Download finished</string>
    <string name="notification_description">Your %s download has finished</string>
    <string name="notification_button">Check status</string>
    <string name="notification_channel_name">Download</string>
    <string name="notification_channel_description">Get notifications of your Downloads</string>
    <string name="button_downloading">Downloading....</string>
    <string name="download">Download</string>
</resources>
