<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/mainHeader"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_baseline_cloud_download"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toTopOf="@id/downloadButton"
            app:layout_constraintTop_toBottomOf="@id/mainHeader">

            <RadioButton
                style="@style/radioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/glide_radio_text" />

            <RadioButton
                style="@style/radioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_app_radio_text" />

            <RadioButton
                style="@style/radioButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/retrofit_radio_text" />
        </RadioGroup>

        <Button
            android:id="@+id/downloadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="Download"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
