<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="itemName"
            type="String" />

        <variable
            name="itemDownloadSucceeded"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_margin"
        app:layoutDescription="@xml/activity_details_scene"
        tools:context=".details.DetailsActivity">

        <TextView
            android:id="@+id/fileNameLabel"
            style="@style/detailScreenLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/file_name" />

        <TextView
            android:id="@+id/fileNameValue"
            style="@style/detailScreenValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{itemName}"
            tools:text="Glide - Image Loading Library by BumpTech" />

        <TextView
            android:id="@+id/fileStatusLabel"
            style="@style/detailScreenLabelStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/status" />

        <TextView
            android:id="@+id/fileStatusValue"
            style="@style/detailScreenValueStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:bindDownloadStatus="@{itemDownloadSucceeded}"
            tools:text="Success" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/detailsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/ok"
            android:textColor="@color/black" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>
